--- a/reactive.html
+++ b/reactive.html
@@ -19,10 +19,12 @@
     if (reactivities.has(object)) {
       return reactivities.get(object);
     }
+    // 2. 使用proxy拦截需要进行响应式处理的对象
     let proxy = new Proxy(object, {
       set(target, prop, value) {
         Reflect.set(target, prop, value);
         if (callbacks.get(target)) {
+          // 3. 设置每次set响应式对象的属性值时，遍历调用注册的回调函数
           if (callbacks.get(target).has(prop)) {
             for (let callback of callbacks.get(target).get(prop)) {
               callback();
@@ -31,6 +33,7 @@
         }
       },
       get(target, prop) {
+        // 4. 统计需要做响应式处理的对象及其属性值
         usedReactivities.push([target, prop]);
         let value = Reflect.get(target, prop);
         if (typeof value === 'object') {
@@ -44,9 +47,10 @@
   }
 
   function effect(callback) {
-    // callbacks.push(callback);
     usedReactivities = [];
+    // 1. 初始化代理
     callback();
+    // 5. 为统计出来的需要做响应式处理的对象的属性值，注册回调函数
     for (let [target, prop] of usedReactivities) {
       if (!callbacks.has(target)) {
         callbacks.set(target, new Map());
